Deleted Unnecessary parts and Improvements
Changes

- Added all the repositories that are needed
- Some improvements in the instructions
- Deleted parts that are not used in the installation process